CUI: item-list: remove presentational classes (--small), fix left alignment of mixed lists (with or without a left-side icon)

--- a/src/scss/themes/fylr/_variables.scss
+++ b/src/scss/themes/fylr/_variables.scss
@@ -325,7 +325,6 @@ $item-list-active-color: 		$body-color !default;
 $item-list-active-background:	gray('200') !default;
 $item-list-indent: 				$btn-padding-x !default;
 $item-list-height: 				$btn-height !default;
-$item-list-height-sm: 			$btn-height-sm !default;
 
 // * Menu
 // * ==========================================
